--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+              src="./assets/images/slider/ryoji-iwata.webp"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+              src="./assets/images/slider/nicholas-green.webp"
               class="d-block w-100"
               alt="..."
             />
@@ -146,41 +146,49 @@
           />
           <img
             data-gallery-tag="Entreprises"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
           />
           <img
             data-gallery-tag="Entreprises"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
           />
           <img
             data-gallery-tag="Mariages"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
           />
           <img
             data-gallery-tag="Portrait"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
           />
           <img
             data-gallery-tag="Mariages"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
           />
           <img
             data-gallery-tag="Portrait"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
           />
           <img
             data-gallery-tag="Concert"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
           />
           <img
             data-gallery-tag="Entreprises"
+            loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
           />
@@ -280,7 +288,11 @@
           </form>
         </div>
         <div class="picture right">
-          <img class="index-img" src="./assets/images/camera.webp" />
+          <img
+            class="index-img"
+            loading="lazy"
+            src="./assets/images/camera.webp"
+          />
         </div>
       </div>
     </div>
