--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr-fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
@@ -19,11 +19,20 @@
     ></script>
     <script defer src="./assets/maugallery.js"></script>
     <script defer src="./assets/scripts.js"></script>
+    <script
+      src="https://kit.fontawesome.com/c95acae5bd.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Nina Carducci photographe</title>
+    <meta
+      name="description"
+      content="Nina Carducci est une photographe de la région de Bordeaux et en Île-de-France pour tous les types d'évenements. Elle couvre : les mariages, les évenements d'entreprise, des shootings de particuliers. Elle propose également des retouches de photos pour des rendus professionnels et des albums personnalisé"
+    />
   </head>
   <body>
-    <div class="top-header">
-      <h3 class="name">Nina Carducci</h3>
-      <div class="nav">
+    <header class="top-header">
+      <h1 class="name">Nina Carducci <br />Photographe</h1>
+      <nav class="nav">
         <ul>
           <li><a href="#about">À propos</a></li>
           <li><a href="#gallery">Galerie</a></li>
@@ -34,12 +43,13 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img class="index-img" src="assets/images/instagram.png" alt=""
-            /></a>
+              ><i class="fa-brands fa-instagram fa-2xl"></i
+              ><span class="off-screen">Instagram</span></a
+            >
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div id="header">
       <div
         id="carouselExampleIndicators"
@@ -71,23 +81,36 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/slider/ryoji-iwata.webp"
-              class="d-block w-100"
-              alt="..."
+              src="./assets/images/slider/ryoji-iwata-desktop.webp"
+              srcset="
+                ./assets/images/slider/ryoji-iwata-mobile.webp   650w,
+                ./assets/images/slider/ryoji-iwata-desktop.webp 1400w
+              "
+              sizes="1400px"
+              class="d-block w-100 index-img"
+              alt="photo d'un homme traversant un passage piéton"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/nicholas-green.webp"
-              class="d-block w-100"
-              alt="..."
+              src="./assets/images/slider/nicholas-green-desktop.webp"
+              srcset="
+                ./assets/images/slider/nicholas-green-mobile.webp   650w,
+                ./assets/images/slider/nicholas-green-desktop.webp 1400w
+              "
+              sizes="1400px"
+              class="d-block w-100 index-img"
+              alt="photo d'un homme dans une foule d'un évenements"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/slider/edward-cisneros.webp"
-              class="d-block w-100"
-              alt="..."
+              src="./assets/images/slider/edward-cisneros-desktop.webp"
+              srcset="./assets/images/slider/edward-cisneros-mobile.webp 650w
+              ./assets/images/slider/edward-cisneros-desktop.webp 1400w"
+              sizes="1400px"
+              class="d-block w-100 index-img"
+              alt="photographie de mariage d'un couple"
             />
           </div>
         </div>
@@ -113,15 +136,19 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img class="index-img" src="./assets/images/nina.webp" />
+        <img
+          class="index-img"
+          src="./assets/images/nina.webp"
+          alt="photo portrait de la photographe Nina Carducci"
+        />
       </div>
       <div id="about-me">
-        <h3 class="about-me__title">A propos de moi</h3>
-        <h6 class="about-me__introduction">
+        <h2 class="about-me__title">À propos de moi</h2>
+        <p class="about-me__introduction">
           Devenir photographe était pour moi une évidence. Comme si j’y étais
           prédestiné. Saisir un moment, une émotion, une situation, un endroit,
           une lumière et les rendre immortels, voilà ce qui me fait vibrer.
-        </h6>
+        </p>
         <p>
           Nous passons notre vie à chercher le bonheur, et lorsque nous y
           touchons, nous n’avons qu’une envie : le figer au travers de
@@ -135,7 +162,7 @@
       </div>
     </div>
     <div id="gallery">
-      <h3 class="title">Portfolio</h3>
+      <h2 class="title">Portfolio</h2>
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
@@ -143,73 +170,82 @@
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+            alt="photo d'une foule lors d'un Concert"
           />
           <img
             data-gallery-tag="Entreprises"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+            alt="photo du portrait d'un homme en costume"
           />
           <img
             data-gallery-tag="Entreprises"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+            alt="photo d'une femme au travail"
           />
           <img
             data-gallery-tag="Mariages"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+            alt="photographie des mains de mariés"
           />
           <img
             data-gallery-tag="Portrait"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+            alt="photographie d'un homme fermant les yeux"
           />
           <img
             data-gallery-tag="Mariages"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+            alt="photo de couple d'un couple de mariés"
           />
           <img
             data-gallery-tag="Portrait"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+            alt="photo portrtait d'une femme lors d'un shooting"
           />
           <img
             data-gallery-tag="Concert"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+            alt="photographie d'un chanteur lors d'un concerts"
           />
           <img
             data-gallery-tag="Entreprises"
             loading="lazy"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+            alt="photo d'une femme en train de rire au travail"
           />
         </div>
       </div>
       <div class="quote">
         <figure>
           <blockquote>
-            <h1 class="quote__text">
+            <p class="quote__text">
               Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou
               qu’un fait est traduit en photo, il cesse d’être un fait pour
               devenir une opinion. L’inexactitude n’existe pas en photographie.
               Toutes les photos sont exactes. Aucune d’elles n’est la vérité.
-            </h1>
+            </p>
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
       </div>
     </div>
     <div id="services">
-      <h3 class="title">Mes services</h3>
+      <h2 class="title">Mes services</h2>
       <div class="container">
         <div class="service">
           <div class="service__description">
@@ -256,11 +292,11 @@
     <div class="quote">
       <figure>
         <blockquote>
-          <h1 class="quote__text">
+          <p class="quote__text">
             De manière inconsciente, je crois, je guette un regard, une
             expression, des traits ou une nostalgie capable de résumer ou plus
             exactement de révéler une vie
-          </h1>
+          </p>
         </blockquote>
         <figcaption class="quote__author">- Richard Avedon</figcaption>
       </figure>
@@ -268,16 +304,17 @@
     <div id="contact">
       <div class="container">
         <div class="form-container">
-          <h3>Une question ? Une demande de devis ?</h3>
+          <h2>Contact</h2>
           <p>
+            Une question ? Une demande de devis ? <br />
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
+            <label for="nom">Nom</label>
             <input type="text" name="nom" id="nom" />
-            <label>Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="message">Message</label>
             <textarea
               name="message"
               id="message"
@@ -292,6 +329,7 @@
             class="index-img"
             loading="lazy"
             src="./assets/images/camera.webp"
+            alt="photographie d'un appareil photo"
           />
         </div>
       </div>
