--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     />
     <meta name="twitter:image" content="./assets/images/nina.webp" />
 
-    <link rel="stylesheet" href="./assets/dist/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+
     <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
