optimisation purge du css bootstrap avec la purge via index.html maugallery.js et ajout bootstrap-grid

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     />
     <meta name="twitter:image" content="./assets/images/nina.webp" />
 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-
+    <link rel="stylesheet" href="./assets/dist/bootstrap1.min.css" />
+    <link rel="stylesheet" href="./assets/dist/bootstrap2.min.css" />
+    <link rel="stylesheet" href="./assets/dist/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="./assets/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -313,7 +314,7 @@
       </div>
     </div>
     <div id="services">
-      <h2 class="title">Mes services de photographie</h2>
+      <h2 class="title">Mes services</h2>
       <div class="container">
         <div class="service">
           <div class="service__description">
